--- a/webroot/wiredux/README
+++ b/webroot/wiredux/README
@@ -8,7 +8,7 @@ In order for this to work
 
 3. Open up the OpenSimWiredux in Admin mode (http://OpenSimWiredux/admin) and add 3 new items:
 
-	- Search
+* Search
 	- Events
 	- Classifieds
 
@@ -16,4 +16,4 @@ In order for this to work
 
 5. Have fun using it
 
-Fly Man-
+Fly-Man-
